--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-loader": "^15.6.4",
+    "vue-template-compiler": "^2.6.7"
   },
   "eslintConfig": {
     "root": true,
